--- a/mnt/project2.ipynb
+++ b/mnt/project2.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "5bcbd7ef-536e-4e14-a1b6-b8676eae567c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Project 2"
    ]
@@ -18,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "14a96bab-99ba-47be-9638-a12d68f0e87b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d3aa9bfc-c608-40c9-9511-5e2c08ce439d",
    "metadata": {},
    "outputs": [],
@@ -51,17 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2435c26d-88b0-4941-af68-99a8b28548ab",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "df_small = spark.read.csv(\"input/sorted_data_smaller.csv\", header=False, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "847a9407-5b54-4d93-b4a9-39269cee9af9",
    "metadata": {},
    "outputs": [],
@@ -90,10 +97,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bdac0318-8aa6-4a00-8afa-2ab6268cafa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+-------------------+-------------------+-----------------+-------------+----------------+---------------+-----------------+----------------+------------+-----------+---------+-------+----------+------------+------------+\n",
+      "|           medallion|        hack_license|    pickup_datetime|   dropoff_datetime|trip_time_in_secs|trip_distance|pickup_longitude|pickup_latitude|dropoff_longitude|dropoff_latitude|payment_type|fare_amount|surcharge|mta_tax|tip_amount|tolls_amount|total_amount|\n",
+      "+--------------------+--------------------+-------------------+-------------------+-----------------+-------------+----------------+---------------+-----------------+----------------+------------+-----------+---------+-------+----------+------------+------------+\n",
+      "|5EE2C4D3BF57BDB45...|E96EF8F6E6122591F...|2013-01-01 00:00:09|2013-01-01 00:00:36|               26|          0.1|       -73.99221|      40.725124|       -73.991646|       40.726658|         CSH|        2.5|      0.5|    0.5|       0.0|         0.0|         3.5|\n",
+      "|42730E78D8BE872B5...|6016A71F1D29D678E...|2013-01-01 00:01:00|2013-01-01 00:01:00|                0|         0.01|             0.0|            0.0|              0.0|             0.0|         CSH|        2.5|      0.5|    0.5|       0.0|         0.0|         3.5|\n",
+      "|0CEBE42EAF42C3380...|CC7A4176549BA819E...|2013-01-01 00:00:00|2013-01-01 00:03:00|              180|         1.56|       -74.00975|      40.706432|       -73.971985|       40.794716|         CSH|        6.5|      0.5|    0.5|       0.0|         0.0|         7.5|\n",
+      "|F07E8A597F1DF9BB3...|D0626B4EF37543B01...|2013-01-01 00:02:00|2013-01-01 00:03:00|               60|         0.77|      -73.944618|      40.783131|       -73.947418|       40.775574|         CSH|        4.5|      0.5|    0.5|       0.0|         0.0|         5.5|\n",
+      "|6BA29E9A69B10F218...|ED368552102F12EA2...|2013-01-01 00:01:00|2013-01-01 00:04:00|              180|         0.74|      -73.971138|       40.75898|       -73.972206|       40.752502|         CRD|        4.5|      0.5|    0.5|       0.0|         0.0|         5.5|\n",
+      "+--------------------+--------------------+-------------------+-------------------+-----------------+-------------+----------------+---------------+-----------------+----------------+------------+-----------+---------+-------+----------+------------+------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "root\n",
+      " |-- medallion: string (nullable = true)\n",
+      " |-- hack_license: string (nullable = true)\n",
+      " |-- pickup_datetime: string (nullable = true)\n",
+      " |-- dropoff_datetime: timestamp (nullable = true)\n",
+      " |-- trip_time_in_secs: integer (nullable = true)\n",
+      " |-- trip_distance: double (nullable = true)\n",
+      " |-- pickup_longitude: double (nullable = true)\n",
+      " |-- pickup_latitude: double (nullable = true)\n",
+      " |-- dropoff_longitude: double (nullable = true)\n",
+      " |-- dropoff_latitude: double (nullable = true)\n",
+      " |-- payment_type: string (nullable = true)\n",
+      " |-- fare_amount: double (nullable = true)\n",
+      " |-- surcharge: double (nullable = true)\n",
+      " |-- mta_tax: double (nullable = true)\n",
+      " |-- tip_amount: double (nullable = true)\n",
+      " |-- tolls_amount: double (nullable = true)\n",
+      " |-- total_amount: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df_small.show(5)  # See the first 5 rows\n",
     "df_small.printSchema()"
@@ -101,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "c5bddfde-a1de-444a-b5e4-5b65154c9752",
    "metadata": {},
    "outputs": [],
@@ -127,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "8067d3c4-b024-403a-ad10-4c6fc97a9dfa",
    "metadata": {},
    "outputs": [
@@ -135,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original row count: 14432092\n",
-      "Cleaned row count: 14186504\n"
+      "Original row count: 2443340\n",
+      "Cleaned row count: 2395511\n"
      ]
     }
    ],
@@ -155,8 +199,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bb4660c5-7088-4807-8f0e-8c1c5cd35150",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+---------------+\n",
+      "|start_cell|end_cell|Number_of_Rides|\n",
+      "+----------+--------+---------------+\n",
+      "|155.160   |154.162 |2200           |\n",
+      "|154.162   |155.160 |2042           |\n",
+      "|156.159   |154.162 |2004           |\n",
+      "|157.161   |154.162 |1935           |\n",
+      "|154.162   |156.161 |1854           |\n",
+      "|154.162   |156.159 |1763           |\n",
+      "|154.162   |157.161 |1751           |\n",
+      "|158.159   |157.161 |1711           |\n",
+      "|155.160   |156.159 |1606           |\n",
+      "|154.162   |155.164 |1578           |\n",
+      "+----------+--------+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from pyspark.sql.functions import col, udf, desc\n",
+    "from pyspark.sql.types import StringType\n",
+    "\n",
+    "def to_cell(lat, lon):\n",
+    "    if not (40.5 <= lat <= 41.8 and -74.25 <= lon <= -73.7):\n",
+    "        return None\n",
+    "    lat0 = 41.474937\n",
+    "    lon0 = -74.913585\n",
+    "    meters_per_deg_lat = 111320\n",
+    "    meters_per_deg_lon = 40075000 * math.cos(math.radians(lat0)) / 360\n",
+    "    cell_x = int((lon - lon0) * meters_per_deg_lon / 500) + 1\n",
+    "    cell_y = int((lat0 - lat) * meters_per_deg_lat / 500) + 1\n",
+    "    if 1 <= cell_x <= 300 and 1 <= cell_y <= 300:\n",
+    "        return f\"{cell_x}.{cell_y}\"\n",
+    "    return None\n",
+    "\n",
+    "to_cell_udf = udf(to_cell, StringType())\n",
+    "\n",
+    "df_filtered = df_clean.withColumn(\"pickup_cell\", to_cell_udf(col(\"pickup_latitude\"), col(\"pickup_longitude\"))) \\\n",
+    "                      .withColumn(\"dropoff_cell\", to_cell_udf(col(\"dropoff_latitude\"), col(\"dropoff_longitude\"))) \\\n",
+    "                      .filter(col(\"pickup_cell\").isNotNull() & col(\"dropoff_cell\").isNotNull())\n",
+    "\n",
+    "routes = df_filtered.groupBy(\"pickup_cell\", \"dropoff_cell\").count()\n",
+    "\n",
+    "top10_routes = routes.orderBy(desc(\"count\")).limit(10)\n",
+    "\n",
+    "top10_routes.select(\n",
+    "    col(\"pickup_cell\").alias(\"start_cell\"),\n",
+    "    col(\"dropoff_cell\").alias(\"end_cell\"),\n",
+    "    col(\"count\").alias(\"Number_of_Rides\")\n",
+    ").show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "40598027-48bc-49bb-86d1-3c46061965ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PART 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e9a223ba-9221-47ce-b68a-ddc13fe2fb79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected sample into memory: 9997 rows\n",
+      "\n",
+      "Update #1\n",
+      "Pickup: 2013-01-01 00:00:09\n",
+      "Dropoff: 2013-01-01 00:00:36\n",
+      "  Route 1: 154.167 → 154.167 — 1 rides\n",
+      "  Route 2: None → None — None rides\n",
+      "  Route 3: None → None — None rides\n",
+      "  Route 4: None → None — None rides\n",
+      "  Route 5: None → None — None rides\n",
+      "  Route 6: None → None — None rides\n",
+      "  Route 7: None → None — None rides\n",
+      "  Route 8: None → None — None rides\n",
+      "  Route 9: None → None — None rides\n",
+      "  Route 10: None → None — None rides\n",
+      "Delay: 385920091.993 seconds\n",
+      "\n",
+      "Update #2\n",
+      "Pickup: 2013-01-01 00:00:00\n",
+      "Dropoff: 2013-01-01 00:03:00\n",
+      "  Route 1: 154.167 → 154.167 — 1 rides\n",
+      "  Route 2: 151.172 → 158.152 — 1 rides\n",
+      "  Route 3: None → None — None rides\n",
+      "  Route 4: None → None — None rides\n",
+      "  Route 5: None → None — None rides\n",
+      "  Route 6: None → None — None rides\n",
+      "  Route 7: None → None — None rides\n",
+      "  Route 8: None → None — None rides\n",
+      "  Route 9: None → None — None rides\n",
+      "  Route 10: None → None — None rides\n",
+      "Delay: 385919947.993 seconds\n",
+      "\n",
+      "Update #3\n",
+      "Pickup: 2013-01-01 00:02:00\n",
+      "Dropoff: 2013-01-01 00:03:00\n",
+      "  Route 1: 154.167 → 154.167 — 1 rides\n",
+      "  Route 2: 151.172 → 158.152 — 1 rides\n",
+      "  Route 3: 162.155 → 162.156 — 1 rides\n",
+      "  Route 4: None → None — None rides\n",
+      "  Route 5: None → None — None rides\n",
+      "  Route 6: None → None — None rides\n",
+      "  Route 7: None → None — None rides\n",
+      "  Route 8: None → None — None rides\n",
+      "  Route 9: None → None — None rides\n",
+      "  Route 10: None → None — None rides\n",
+      "Delay: 385919947.993 seconds\n",
+      "\n",
+      "Update #4\n",
+      "Pickup: 2013-01-01 00:01:00\n",
+      "Dropoff: 2013-01-01 00:04:00\n",
+      "  Route 1: 154.167 → 154.167 — 1 rides\n",
+      "  Route 2: 151.172 → 158.152 — 1 rides\n",
+      "  Route 3: 162.155 → 162.156 — 1 rides\n",
+      "  Route 4: 158.160 → 158.161 — 1 rides\n",
+      "  Route 5: None → None — None rides\n",
+      "  Route 6: None → None — None rides\n",
+      "  Route 7: None → None — None rides\n",
+      "  Route 8: None → None — None rides\n",
+      "  Route 9: None → None — None rides\n",
+      "  Route 10: None → None — None rides\n",
+      "Delay: 385919887.993 seconds\n",
+      "\n",
+      "Update #5\n",
+      "Pickup: 2013-01-01 00:02:15\n",
+      "Dropoff: 2013-01-01 00:04:01\n",
+      "  Route 1: 154.167 → 154.167 — 1 rides\n",
+      "  Route 2: 151.172 → 158.152 — 1 rides\n",
+      "  Route 3: 162.155 → 162.156 — 1 rides\n",
+      "  Route 4: 158.160 → 158.161 — 1 rides\n",
+      "  Route 5: 154.160 → 153.159 — 1 rides\n",
+      "  Route 6: None → None — None rides\n",
+      "  Route 7: None → None — None rides\n",
+      "  Route 8: None → None — None rides\n",
+      "  Route 9: None → None — None rides\n",
+      "  Route 10: None → None — None rides\n",
+      "Delay: 385919886.993 seconds\n",
+      "\n",
+      "Done. Total updates triggered: 676\n",
+      "\n",
+      "Last 5 updates:\n",
+      "\n",
+      "Pickup: 2013-01-01 04:08:27, Dropoff: 2013-01-01 04:29:05\n",
+      "  Route 1: 154.162 → 155.168 — 3 rides\n",
+      "  Route 2: 156.166 → 161.156 — 2 rides\n",
+      "  Route 3: 156.163 → 159.159 — 2 rides\n",
+      "  Route 4: 157.163 → 157.162 — 2 rides\n",
+      "  Route 5: 156.163 → 154.162 — 2 rides\n",
+      "  Route 6: 153.163 → 154.159 — 2 rides\n",
+      "  Route 7: 154.158 → 157.162 — 2 rides\n",
+      "  Route 8: 157.162 → 155.164 — 2 rides\n",
+      "  Route 9: 154.159 → 155.158 — 2 rides\n",
+      "  Route 10: 154.164 → 154.168 — 2 rides\n",
+      "Delay: 385903993.844 seconds\n",
+      "\n",
+      "Pickup: 2013-01-01 04:22:13, Dropoff: 2013-01-01 04:29:39\n",
+      "  Route 1: 154.162 → 155.168 — 3 rides\n",
+      "  Route 2: 156.163 → 159.159 — 2 rides\n",
+      "  Route 3: 157.163 → 157.162 — 2 rides\n",
+      "  Route 4: 156.163 → 154.162 — 2 rides\n",
+      "  Route 5: 153.163 → 154.159 — 2 rides\n",
+      "  Route 6: 154.158 → 157.162 — 2 rides\n",
+      "  Route 7: 157.162 → 155.164 — 2 rides\n",
+      "  Route 8: 154.159 → 155.158 — 2 rides\n",
+      "  Route 9: 154.164 → 154.168 — 2 rides\n",
+      "  Route 10: 154.163 → 157.162 — 2 rides\n",
+      "Delay: 385903959.852 seconds\n",
+      "\n",
+      "Pickup: 2013-01-01 04:24:13, Dropoff: 2013-01-01 04:30:01\n",
+      "  Route 1: 154.162 → 155.168 — 3 rides\n",
+      "  Route 2: 156.163 → 154.162 — 2 rides\n",
+      "  Route 3: 153.163 → 154.159 — 2 rides\n",
+      "  Route 4: 154.158 → 157.162 — 2 rides\n",
+      "  Route 5: 157.162 → 155.164 — 2 rides\n",
+      "  Route 6: 154.159 → 155.158 — 2 rides\n",
+      "  Route 7: 154.164 → 154.168 — 2 rides\n",
+      "  Route 8: 154.163 → 157.162 — 2 rides\n",
+      "  Route 9: 154.158 → 154.162 — 2 rides\n",
+      "  Route 10: 154.157 → 157.161 — 2 rides\n",
+      "Delay: 385903937.869 seconds\n",
+      "\n",
+      "Pickup: 2013-01-01 04:22:00, Dropoff: 2013-01-01 04:31:00\n",
+      "  Route 1: 154.158 → 154.162 — 3 rides\n",
+      "  Route 2: 154.162 → 155.168 — 3 rides\n",
+      "  Route 3: 156.163 → 154.162 — 2 rides\n",
+      "  Route 4: 153.163 → 154.159 — 2 rides\n",
+      "  Route 5: 154.158 → 157.162 — 2 rides\n",
+      "  Route 6: 157.162 → 155.164 — 2 rides\n",
+      "  Route 7: 154.159 → 155.158 — 2 rides\n",
+      "  Route 8: 154.164 → 154.168 — 2 rides\n",
+      "  Route 9: 154.163 → 157.162 — 2 rides\n",
+      "  Route 10: 154.157 → 157.161 — 2 rides\n",
+      "Delay: 385903878.89 seconds\n",
+      "\n",
+      "Pickup: 2013-01-01 04:18:12, Dropoff: 2013-01-01 04:31:09\n",
+      "  Route 1: 154.158 → 154.162 — 3 rides\n",
+      "  Route 2: 154.162 → 155.168 — 3 rides\n",
+      "  Route 3: 153.163 → 154.159 — 2 rides\n",
+      "  Route 4: 154.158 → 157.162 — 2 rides\n",
+      "  Route 5: 157.162 → 155.164 — 2 rides\n",
+      "  Route 6: 154.159 → 155.158 — 2 rides\n",
+      "  Route 7: 154.164 → 154.168 — 2 rides\n",
+      "  Route 8: 154.163 → 157.162 — 2 rides\n",
+      "  Route 9: 154.157 → 157.161 — 2 rides\n",
+      "  Route 10: 155.169 → 155.161 — 2 rides\n",
+      "Delay: 385903869.893 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "import time\n",
+    "\n",
+    "# As the data isn't a stream meaning we don't have a Kafka or something set up, this is the next best thing: It starts sliding the window to imitate \n",
+    "# the streaming data that is coming and updates the routes accordingly.\n",
+    "\n",
+    "# Uncomment this line to achieve longer run time with full data (i stopped at 23 minutes)\n",
+    "# df_sample = df_clean\n",
+    "\n",
+    "\n",
+    "df_sample = df_clean.limit(10000)\n",
+    "\n",
+    "df_pd = df_sample.withColumn(\"pickup_cell\", to_cell_udf(col(\"pickup_latitude\"), col(\"pickup_longitude\"))) \\\n",
+    "                 .withColumn(\"dropoff_cell\", to_cell_udf(col(\"dropoff_latitude\"), col(\"dropoff_longitude\"))) \\\n",
+    "                 .filter(col(\"pickup_cell\").isNotNull() & col(\"dropoff_cell\").isNotNull()) \\\n",
+    "                 .orderBy(\"dropoff_datetime\") \\\n",
+    "                 .select(\"pickup_datetime\", \"dropoff_datetime\", \"pickup_cell\", \"dropoff_cell\") \\\n",
+    "                 .collect()\n",
+    "\n",
+    "print(\"Collected sample into memory:\", len(df_pd), \"rows\")\n",
+    "\n",
+    "window_minutes = 30\n",
+    "results = []\n",
+    "prev_top10_keys = []\n",
+    "\n",
+    "for i, row in enumerate(df_pd):\n",
+    "    now = row[\"dropoff_datetime\"]\n",
+    "    pickup_time = row[\"pickup_datetime\"]\n",
+    "    window_start = now - timedelta(minutes=window_minutes)\n",
+    "\n",
+    "    j = i\n",
+    "    while j >= 0 and df_pd[j][\"dropoff_datetime\"] >= window_start:\n",
+    "        j -= 1\n",
+    "    window_rows = df_pd[j+1:i+1]\n",
+    "\n",
+    "    route_counts = {}\n",
+    "    for r in window_rows:\n",
+    "        key = (r[\"pickup_cell\"], r[\"dropoff_cell\"])\n",
+    "        route_counts[key] = route_counts.get(key, 0) + 1\n",
+    "\n",
+    "    top10 = sorted(route_counts.items(), key=lambda x: -x[1])[:10]\n",
+    "    top10_keys = [route for route, _ in top10]\n",
+    "\n",
+    "    if top10_keys != prev_top10_keys:\n",
+    "        prev_top10_keys = top10_keys.copy()\n",
+    "\n",
+    "        while len(top10) < 10:\n",
+    "            top10.append(((None, None), None))\n",
+    "\n",
+    "        delay = round(time.time() - time.mktime(now.timetuple()), 3)\n",
+    "\n",
+    "        row_out = [pickup_time, now]\n",
+    "        for (start, end), count in top10:\n",
+    "            row_out.extend([start, end, count])\n",
+    "        row_out.append(delay)\n",
+    "        results.append(row_out)\n",
+    "\n",
+    "        if len(results) <= 5:\n",
+    "            print(f\"\\nUpdate #{len(results)}\")\n",
+    "            print(\"Pickup:\", pickup_time)\n",
+    "            print(\"Dropoff:\", now)\n",
+    "            for idx, ((s, e), c) in enumerate(top10, 1):\n",
+    "                print(f\"  Route {idx}: {s} → {e} — {c} rides\")\n",
+    "            print(\"Delay:\", delay, \"seconds\")\n",
+    "\n",
+    "print(\"\\nDone. Total updates triggered:\", len(results))\n",
+    "\n",
+    "if len(results) > 5:\n",
+    "    print(\"\\nLast 5 updates:\")\n",
+    "    for row in results[-5:]:\n",
+    "        print(f\"\\nPickup: {row[0]}, Dropoff: {row[1]}\")\n",
+    "        for i in range(2, 32, 3):\n",
+    "            print(f\"  Route {(i - 2)//3 + 1}: {row[i]} → {row[i+1]} — {row[i+2]} rides\")\n",
+    "        print(\"Delay:\", row[-1], \"seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caba7469-5b20-4f45-b628-6905065fbcb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddc91816-02fe-445a-a5d9-048ca74300f1",
    "metadata": {},
    "outputs": [],
    "source": []
